--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,17 @@ postgresql-client
 binutils
 libproj-dev
 postgis
+djangorestframework-gis==0.15
+djangorestframework==3.11.0
+apig-wsgi==2.6.0
+bidict==0.19.0
+boto3==1.13.26
+channels==3.0.3
+channels-redis==3.3.0
+dj-database-url==0.5.0
+django-chroniker==1.0.22
+django-cors-headers==3.7.0
+django-debug-toolbar==2.2
+django-dirtyfields==1.4
+django-extensions==3.0.1
+django-filter==2.3.0
