--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,5 @@
 django==3.0.8
-python3.10
-postgresql
-libpq-dev
-python3-psycopg2
-postgresql-contrib
-postgresql-client-common
-postgresql-client
-binutils
-libproj-dev
-postgis
+paho-mqtt==1.6.1
 djangorestframework-gis==0.15
 djangorestframework==3.11.0
-apig-wsgi==2.6.0
-bidict==0.19.0
-boto3==1.13.26
-channels==3.0.3
-channels-redis==3.3.0
-dj-database-url==0.5.0
-django-chroniker==1.0.22
-django-cors-headers==3.7.0
-django-debug-toolbar==2.2
-django-dirtyfields==1.4
-django-extensions==3.0.1
-django-filter==2.3.0
+
