--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,13 @@
 django==3.0.8
 paho-mqtt==1.6.1
-djangorestframework-gis==0.15
-djangorestframework==3.11.0
+asgiref==3.5.0
+djangorestframework==3.13.1
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
+pytz==2021.3
+sqlparse==0.4.2
+tzdata==2021.5
+dj-database-url==0.5.0
 markdown
 django-filter
 
