--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-django==3.0.8
+django==3.2
 paho-mqtt==1.6.1
 asgiref==3.5.0
 djangorestframework==3.13.1
@@ -10,4 +10,4 @@ tzdata==2021.5
 dj-database-url==0.5.0
 markdown
 django-filter==23.2
-django-extensions=3.2.3
+django-extensions==3.2.3
