--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,197 @@
-django==3.0.8
-paho-mqtt==1.6.1
+affine==2.4.0
+aioredis==1.3.1
+apig-wsgi==2.6.0
+appdirs==1.4.4
+arrow==1.2.3
 asgiref==3.5.0
+astroid==2.3.3
+async-timeout==4.0.2
+attrs==22.2.0
+autobahn==23.1.2
+Automat==22.10.0
+backcall==0.2.0
+bcrypt==3.2.0
+beautifulsoup4==4.11.2
+bidict==0.19.0
+binaryornot==0.4.4
+black==19.10b0
+bleach==6.0.0
+blinker==1.4
+boto3==1.13.26
+botocore==1.16.26
+certifi==2020.6.20
+cffi==1.15.1
+channels==3.0.3
+channels-redis==3.3.0
+chardet==3.0.4
+chevron==0.14.0
+click==7.1.2
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.4
+constantly==15.1.0
+cookiecutter==1.6.0
+cryptography==39.0.2
+cssutils==2.6.0
+daphne==3.0.2
+dateparser==0.7.6
+decorator==5.1.1
+defusedxml==0.7.1
+diff-match-patch==20200713
+distlib==0.3.4
+distro==1.7.0
+dj-database-url==0.5.0
+Django==3.0.8
+django-anymail==7.1.0
+django-appconf==1.0.5
+django-autoslug==1.9.8
+django-chroniker==1.0.22
+django-cors-headers==3.7.0
+django-debug-toolbar==2.2
+django-dirtyfields==1.4
+django-extensions==3.0.1
+django-filter==2.3.0
+django-fobi==0.19.8
+django-formtools==2.4
+django-imagekit==4.0.2
+django-import-export==2.2.0
+django-inlinecss==0.3.0
+django-mailer==2.0.1
+django-map-widgets==0.3.0
+django-model-utils==4.1.1
+django-nine==0.2.7
+django-nonefield==0.4
+django-storages==1.9.1
+django-summernote==0.8.11.6
 djangorestframework==3.13.1
+djangorestframework-gis==0.15
+docker>=4.4.4
+docker-compose>=1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.15.2
+easy-thumbnails==2.8.5
+et-xmlfile==1.1.0
+factory-boy==3.2.0
+Faker==17.6.0
+fasteners==0.14.1
+filelock==3.6.0
+Flask==1.0.4
+future==0.18.2
+GDAL==3.4.1
+hiredis==2.2.2
+httplib2==0.20.2
+hyperlink==21.0.0
+idna==2.10
+importlib-metadata==4.6.4
+incremental==22.10.0
+invoke==1.4.1
+ipython==7.16.1
+isort==4.3.21
+itsdangerous==2.1.2
+jedi==0.18.2
+jeepney==0.7.1
+Jinja2==3.1.2
+jinja2-time==0.2.0
+jmespath==0.9.5
+jsonschema==3.2.0
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy-object-proxy==1.4.3
+lockfile==0.12.2
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.4.3
+MarkupPy==1.14
+MarkupSafe==2.1.2
+mccabe==0.6.1
+monotonic==1.6
+more-itertools==8.10.0
+msgpack==1.0.5
+netifaces==0.11.0
+nodeenv==1.3.4
+oauthlib==3.2.0
+odfpy==1.4.1
+olefile==0.46
+openpyxl==3.1.1
+packaging==23.0
+paho-mqtt==1.6.1
+paramiko==2.9.3
+parso==0.8.3
+pathspec==0.11.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pilkit==2.0
+Pillow==9.4.0
+platformdirs==2.5.1
+poyo==0.5.0
+progressbar2==3.47.0
+prompt-toolkit==3.0.38
+protobuf==3.12.4
+psutil==5.9.4
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.20.1
+pycparser==2.21
+pyflakes==2.1.1
+Pygments==2.14.0
+PyJWT==2.3.0
+pylint==2.4.4
+pylint-django==2.0.14
+pylint-plugin-utils==0.7
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pynliner==0.8.0
+pyOpenSSL==23.0.0
+pyparsing==2.4.7
+pyproj==3.4.1
+pyRFC3339==1.1
+pyrsistent==0.19.3
+python-dateutil==2.8.0
+python-dotenv==0.13.0
+python-utils==2.3.0
 pytz==2021.3
+pyxdg==0.27
+PyYAML==5.3.1
+rasterio==1.3.6
+regex==2022.10.31
+requests==2.23.0
+s3transfer==0.3.2
+SecretStorage==3.3.1
+serverlessrepo==0.1.9
+service-identity==21.1.0
+six==1.14.0
+snuggs==1.4.7
+soupsieve==2.4
 sqlparse==0.4.2
+tablib==3.3.0
+texttable==1.6.4
+toml==0.10.2
+tomlkit==0.5.8
+toposort==1.10
+traitlets==5.9.0
+Twisted==22.10.0
+txaio==23.1.1
+typed-ast==1.5.4
+typing_extensions==4.5.0
 tzdata==2021.5
-dj-database-url==0.5.0
-markdown
-django-filter==23.2
-django-extensions=3.2.3
+tzlocal==4.3
+Unidecode==1.3.6
+uritemplate==3.0.1
+urllib3==1.25.8
+virtualenv==20.13.0
+webencodings==0.5.1
+whichcraft==0.6.1
+whitenoise==6.5.0
+wrapt==1.11.2
+xdg==5
+xlrd==2.0.1
+xlwt==1.3.0
+yamllint==1.23.0
+zipp==1.0.0
+zope.interface==6.0
